--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -1,3 +1,8 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+body {
+  background-color: #333333;
+  margin: 2rem 6rem;
+}
